# TWITTERBOT3.0

./: .gitignore  README.md  pyproject.toml
src/: browser.py  churn.py  config.py  email_template.html  emailer.py  identity.py  main.py  supabase_client.py  twitter.py
tests/: follow-user.py  list-followers.py  preview-email.py  unfollow-user.py
